--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">-->
+    <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
-  <%= javascript_pack_tag 'hello_react' %>
     <%= yield %>
+    <%= react_component('NavBar') %>
   </body>
 </html>
